--- a/assets/css/admin-panel.css
+++ b/assets/css/admin-panel.css
@@ -86,3 +86,15 @@
 .items-controls{
 	max-height:500px;overflow:scroll;
 }
+
+#global_configs{
+	border: 1px solid;
+	border-radius: 10px;
+	display: none;
+	position: absolute;
+	z-index: 1000000;
+	background-color: white !important;
+	padding: 3%;
+	margin-bottom: 2.5%;
+	width: 100%;
+}
